@@ -17,7 +17,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.90
+Release: 1.0
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -522,6 +522,10 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Tue Aug 27 2002 Jeff Johnson <jbj@redhat.com> 4.1-1.0
+- portability: carry libelf in src rpm, include signal.h.
+- release candidate.
+
 * Mon Aug 26 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.90
 - python: don't remap NOKEY/UNTRUSTED to OK.
 - beecrypt: change local absolute symbols to defines for prelinking.
